--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body {
     z-index: 1;
     
 }
+.wind img {
+    width: 100%;
+    height: 10%;
+}
 #wind1{
     top:60vh;
     left: 70%;
@@ -58,7 +62,13 @@ body {
 .sun{
     position: absolute;
     z-index: 1;
-    left: 40%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.sun img{
+    width: 100%;
+    height: 10%;
 }
 .birds{
     position: absolute;
@@ -113,7 +123,7 @@ body {
     display: grid;
     grid-template-columns: repeat(5,1fr);
 }
-.rainyRains{
+.rains{
     position: absolute ;
     z-index: 1;
     width: 90%;
@@ -123,13 +133,25 @@ body {
     grid-template-columns: repeat(5,1fr);
     top: 20vh;
 }
-.cloudy{
+.cloudy, .rainy{
     position: absolute ;
     z-index: 1;
     width: 90%;
+}
+.clouds{
     align-items: flex-start;
     display: grid;
     grid-template-columns: repeat(5,1fr);
+}
+#cloud6 img{
+    width:100%;
+    
+}
+.partly-cloudy .cloud{
+    align-items: flex-start;
+    display: grid;
+    position: relative;
+    top: 5vh;
 }
 .clear-night{
     position: absolute ;
@@ -522,10 +544,7 @@ body {
     body{
         height: 100%;
         overflow: auto;
-        background-attachment: scroll !important;     /* Fixes black/blank background on mobile */
-        background-position: center center !important;
-        background-size: cover !important;           /* Ensures gradient fills the screen */
-        background-repeat: no-repeat !important;
+        background-attachment:scroll;
     }
     .bg-sunny,
     .bg-partly-cloudy,
@@ -660,25 +679,37 @@ body {
     .div3 {
         position: static;
     }
-    .wind{
+    #cloud5, #cloud1, #rain5, #rain4, #rain3, #snow5, #snow4, #snow3 {
         display: none;
     }
-    #cloud5, #cloud1, #rain5, #rain4, #rain3, #wind2, #wind1, #birds1, #birds2, #snow5, #snow4, #snow3 {
-        display: none;
+    #birds1{
+        left: 5%;
+        top:30vh;
     }
+    #birds2{
+        left: 40%;
+        top:30vh;
+    }
+    
     .cloudy{
-    position: absolute ;
-    z-index: 1;
-    width: 85%;
-    align-items: flex-start;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
+        position: absolute ;
+        z-index: 1;
+        width: 85%;
+    
+    }
+    .clouds{
+        align-items: flex-start;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
     }
     .cloud{
         top:5%;
     }
     .stars img, .rain img,.snow img{
         width:100%;
+    }
+    .weather-overlay{
+        position: fixed;
     }
     
 }
@@ -726,4 +757,5 @@ body {
     .cloud{
         display: none;
     }
+    
 }
